# tru

./: .gitignore  build.bat  build.spec  build_helper.py  ghepvoice.py  ghepvoice.spec  main.py  pyproject.toml  requirements.txt
vntts/: __init__.py  config.yaml
vntts/utils/: __init__.py  phonemize_text.py
vntts/vieneu_tts/: vieneu_tts.py
