[tool.uv]
index-strategy = "unsafe-best-match"
required-environments = [
    "sys_platform == 'win32' and platform_machine == 'AMD64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]
override-dependencies = [
    "nvidia-nccl-cu12; sys_platform != 'win32'",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"

[project]
name = "VN-TTS-Studio"
version = "0.1.0"
description = "Vietnamese TTS Studio Application"
requires-python = "==3.12.*"
dependencies = [
    "customtkinter>=5.2.0",
    "requests>=2.31.0",
    "python-docx>=0.8.11",
    "google-genai>=0.3.0",
    "pyaudio>=0.2.13",
    # VN TTS dependencies (heavy - copy to build folder)
    "phonemizer>=3.3.0",
    "torch",
    "torchvision",
    "torchaudio",
    "neucodec>=0.0.4",
    "librosa>=0.11.0",
    "onnxruntime>=1.23.2",
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
torchaudio = { index = "pytorch" }